@@ -34,6 +34,16 @@ choose-mirror (0.022) UNRELEASED; urgency=low
    - Update nb.po.
   * Alastair McKinstry
    - Add Irish translation (ga.po)
+  * Joey Hess
+   - Fix code that tried to parse the debconf string return code from
+     INPUT commands, a string that is not in the debconf spec and could
+     change at any time. Instead, use the well-defined numeric part of
+     the return code.
+   - Don't crash if debian-installer/country is unavailable.
+   - Try to update the Mirrors.masterlist every build (using a null "force"
+     target), to ensure that it is always up-to-date on new uploads of the
+     package.
+   - Remove the empty Mirrors.masterlist.new if retreival fails.
   *Kęstutis Biliūnas
    - Updated Lithuanian translation.
 
